# nanoVLM_AICity

./: Distracted_Activity_Class_definition.txt  README.md  classify_frames.py  extract_clips.py  nanoVLM.ipynb  prepare_clips_csv.py  pyproject.toml  sample_frames.py  sampled_seconds_clips.csv  train_clips.py
data/: collators.py
models/: config.py
